changed tag for seo optimisation / removed useless files

--- a/views/agilite.html.twig
+++ b/views/agilite.html.twig
@@ -43,23 +43,23 @@ Alliée aux principes de <strong>l'amélioration continue</strong> elle nous per
 						<div class="large-4 columns">
 							<ul>
 								<li>
-								<img src="assets/img/svg/check.svg" alt="" class='svg checkmark'>
+								<img src="assets/img/svg/check.svg" alt="coche" class='svg checkmark'>
 									Maximiser l'apport de valeur par le ratio valeur/complexité
 								</li>
 								<li>
-									<img src="assets/img/svg/check.svg" alt="" class='svg checkmark'>
+									<img src="assets/img/svg/check.svg" alt="coche" class='svg checkmark'>
 									Minimiser le temps de réalisation
 								</li>
 								<li>
-									<img src="assets/img/svg/check.svg" alt="" class='svg checkmark'>
+									<img src="assets/img/svg/check.svg" alt="coche" class='svg checkmark'>
 									Engagement du client
 								</li>
 								<li>
-									<img src="assets/img/svg/check.svg" alt="" class='svg checkmark'>
+									<img src="assets/img/svg/check.svg" alt="coche" class='svg checkmark'>
 									Itérations courtes
 								</li>
 								<li>
-									<img src="assets/img/svg/check.svg" alt="" class='svg checkmark'>
+									<img src="assets/img/svg/check.svg" alt="coche" class='svg checkmark'>
 									Optimisation du ROI
 								</li>
 
@@ -82,19 +82,19 @@ Alliée aux principes de <strong>l'amélioration continue</strong> elle nous per
 						<div class="large-4 columns">
 							<ul>
 								<li>
-									<img src="assets/img/svg/check.svg" alt="" class='svg checkmark'>
+									<img src="assets/img/svg/check.svg" alt="coche" class='svg checkmark'>
 									Gestion qualitative et quantitative des risques projet
 								</li>
 								<li>
-									<img src="assets/img/svg/check.svg" alt="" class='svg checkmark'>
+									<img src="assets/img/svg/check.svg" alt="coche" class='svg checkmark'>
 									Itérations courtes
 								</li>
 								<li>
-									<img src="assets/img/svg/check.svg" alt="" class='svg checkmark'>
+									<img src="assets/img/svg/check.svg" alt="coche" class='svg checkmark'>
 									Feedback client
 								</li>
 								<li>
-									<img src="assets/img/svg/check.svg" alt="" class='svg checkmark'>
+									<img src="assets/img/svg/check.svg" alt="coche" class='svg checkmark'>
 									Recette et validation en continu
 								</li>
 							</ul>
@@ -116,11 +116,11 @@ Alliée aux principes de <strong>l'amélioration continue</strong> elle nous per
 						<div class="large-4 columns">
 							<ul>
 								<li>
-									<img src="assets/img/svg/check.svg" alt="" class='svg checkmark'>
-									Méthode itérative & incrémentale
+									<img src="assets/img/svg/check.svg" alt="coche" class='svg checkmark'>
+									Méthode itérative &amp; incrémentale
 								</li>
 								<li>
-									<img src="assets/img/svg/check.svg" alt="" class='svg checkmark'>
+									<img src="assets/img/svg/check.svg" alt="coche" class='svg checkmark'>
 									Tolérance aux changements même tard dans le projet
 								</li>
 							</ul>
@@ -144,15 +144,15 @@ Alliée aux principes de <strong>l'amélioration continue</strong> elle nous per
 						<div class="large-4 columns">
 							<ul>
 								<li>
-									<img src="assets/img/svg/check.svg" alt="" class='svg checkmark'>
+									<img src="assets/img/svg/check.svg" alt="coche" class='svg checkmark'>
 									Timebox et activités agiles
 								</li>
 								<li>
-									<img src="assets/img/svg/check.svg" alt="" class='svg checkmark'>
+									<img src="assets/img/svg/check.svg" alt="coche" class='svg checkmark'>
 									Management visuel (transparence)
 								</li>
 								<li>
-									<img src="assets/img/svg/check.svg" alt="" class='svg checkmark'>
+									<img src="assets/img/svg/check.svg" alt="coche" class='svg checkmark'>
 									Indicateurs probants (burndown et burnup)
 								</li>
 							</ul>
