--- a/views/agilite.html.twig
+++ b/views/agilite.html.twig
@@ -34,9 +34,12 @@ Alliée aux principes de <strong>l'amélioration continue</strong> elle nous per
 					<div class="medium-6 columns large-push-6">
 						<h2>Gestion par la Valeur</h2>
 						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptates, tenetur, temporibus, inventore, ipsum ut itaque nobis dolore qui facere suscipit pariatur sint alias modi soluta labore repudiandae quidem tempora odio.Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestias, adipisci eligendi totam. Dolorum, a quis sunt quasi adipisci magnam alias aspernatur asperiores suscipit rerum cumque minima mollitia fuga vero id!</p>
+						<p>
+							<a data-pos="1" data-scroll="0" href="/" data-page-title="Home" class="button enabled"><span data-hover="Back">Back</span></a>
+						</p>
 					</div>
 
-					<div class="medium-6  columns large-pull-6 agility-item">
+					<div class="medium-6  columns large-pull-6 agility-item scroll-item">
 						<div class="large-8 large-push-4 columns">
 							<svg id="AGI-value" class="svg-agilite svg-auto-size" width="393px" height="269px" x="0px" y="0px" viewBox="20 0 393 269"></svg>
 						</div>
@@ -75,7 +78,7 @@ Alliée aux principes de <strong>l'amélioration continue</strong> elle nous per
 						<h2>Gestion par les Risques</h2>
 						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptates, tenetur, temporibus, inventore, ipsum ut itaque nobis dolore qui facere suscipit pariatur sint alias modi soluta labore repudiandae quidem tempora odio.Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestias, adipisci eligendi totam. Dolorum, a quis sunt quasi adipisci magnam alias aspernatur asperiores suscipit rerum cumque minima mollitia fuga vero id!</p>
 					</div>
-					<div class="medium-6 columns agility-item">
+					<div class="medium-6 columns agility-item scroll-item">
 						<div class="large-8 columns">
 							<svg id="AGI-risk" class="svg-agilite svg-auto-size" width="393px" height="269px" x="0px" y="0px" viewBox="20 0 393 269"></svg>
 						</div>
@@ -108,8 +111,11 @@ Alliée aux principes de <strong>l'amélioration continue</strong> elle nous per
 					<div class="medium-6 large-push-6 columns">
 						<h2>Adaptabilité</h2>
 						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptates, tenetur, temporibus, inventore, ipsum ut itaque nobis dolore qui facere suscipit pariatur sint alias modi soluta labore repudiandae quidem tempora odio.Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestias, adipisci eligendi totam. Dolorum, a quis sunt quasi adipisci magnam alias aspernatur asperiores suscipit rerum cumque minima mollitia fuga vero id!</p>
+						<p>
+							<a data-pos="1" data-scroll="1" href="/" data-page-title="Home" class="button enabled"><span data-hover="Back">Back</span></a>
+						</p>
 					</div>
-					<div class="medium-6 large-pull-6 columns agility-item">
+					<div class="medium-6 large-pull-6 columns agility-item scroll-item">
 						<div class="large-8 large-push-4 columns">
 							<svg id="AGI-adapt" class="svg-agilite svg-auto-size" width="393px" height="269px" x="0px" y="0px" viewBox="20 0 393 269"></svg>
 						</div>
@@ -137,7 +143,7 @@ Alliée aux principes de <strong>l'amélioration continue</strong> elle nous per
 						<h2>Visibilité</h2>
 						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptates, tenetur, temporibus, inventore, ipsum ut itaque nobis dolore qui facere suscipit pariatur sint alias modi soluta labore repudiandae quidem tempora odio.Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestias, adipisci eligendi totam. Dolorum, a quis sunt quasi adipisci magnam alias aspernatur asperiores suscipit rerum cumque minima mollitia fuga vero id!</p>
 					</div>
-					<div class="medium-6 columns agility-item">
+					<div class="medium-6 columns agility-item scroll-item">
 						<div class="large-8 columns">
 							<svg id="AGI-vis" class="svg-agilite svg-auto-size" width="393px" height="269px" x="0px" y="0px" viewBox="20 0 393 269"></svg>
 						</div>
