--- a/views/home.html.twig
+++ b/views/home.html.twig
@@ -41,11 +41,11 @@
 	  	</div>
 		<section class="svg-anim ❤ svg-valeur" data-color="col1" data-title="Gestion par la valeur">
 			<div class="row">
-				<div class="large-6 medium-5 columns anim-content">
+				<div class="large-6 medium-5 columns anim-content scroll-item">
 					<h2><span>Gestion <span>par </span></span><span>la</span> <span>valeur</span></h2>
 					<h3>Optimiser la création de valeur</h3>
 					<p>Nous pilotons votre projet de A à Z avec vous en fonction de la valeur qu’il apportera à vos utilisateurs. Vous possédez rapidement un produit qui répond à vos besoins et ceux de votre cible.</p>
-					<a data-pos="3" data-scroll="0" href="/agilite" class="button enabled"><span data-hover="En savoir plus">En savoir plus</span></a>
+					<a data-pos="3" data-scroll="0" data-page-title="Agilite" href="/agilite" class="button enabled"><span data-hover="En savoir plus">En savoir plus</span></a>
 				</div>
 				<div class="large-6 medium-7 columns anim-item">
 					{% if ress.isMobile ==  true or (browser.browser == "IE" and browser.majorver < 10) %}
@@ -68,11 +68,11 @@
 		</section>
 		<section class="svg-anim ❤ svg-risque" data-color="col2" data-title="Gestion par les risques">
 			<div class="row">
-				<div class="large-6 large-push-6 medium-5 columns anim-content">
+				<div class="large-6 large-push-6 medium-5 columns anim-content scroll-item">
 					<h2><span>Gestion par </span><span>les</span> <span>risques</span></h2>
 					<h3>Anticiper pour prévenir les risques</h3>
 					<p>Avec votre collaboration, nous menons dès le début du projet une analyse des risques afin de limiter les retours de vos utilisateurs et ainsi maximiser sa réussite.</p>
-					<a data-pos="3" data-scroll="1" href="/agilite" class="button enabled"><span data-hover="En savoir plus">En savoir plus</span></a>
+					<a data-pos="3" data-scroll="1" data-page-title="Agilite" href="/agilite" class="button enabled"><span data-hover="En savoir plus">En savoir plus</span></a>
 				</div>
 				<div class="large-6 large-pull-6 medium-7 columns anim-item">
 					{% if ress.isMobile ==  true %}
@@ -97,11 +97,11 @@
 				<a class='next-section'>
 					<i class="icon-arrow-down4"> </i>
 				</a>
-				<div class="large-6 medium-6 columns anim-content">
+				<div class="large-6 medium-6 columns anim-content scroll-item">
 					<h2><span>Amélioration</span><span> continue</span></h2>
 					<h3>Toujours progresser pour viser l’excellence.</h3>
 					<p>Tous les projets sont différents. Nous tirons parti de cette diversité pour apprendre et évoluer sans cesse. Ces retours d’expériences servent l’amélioration de votre produit.</p>
-					<a data-pos="3" data-scroll="2" href="/agilite" class="button enabled"><span data-hover="En savoir plus">En savoir plus</span></a>
+					<a data-pos="3" data-scroll="2" data-page-title="Agilite" href="/agilite" class="button enabled"><span data-hover="En savoir plus">En savoir plus</span></a>
 				</div>
 				<div class="large-6 medium-6 columns anim-item">
 					{% if ress.isMobile ==  true %}
