--- a/web/assets/scss/sections/agilite.scss
+++ b/web/assets/scss/sections/agilite.scss
@@ -49,11 +49,11 @@
 }
 
 .agilite article:nth-child(3) .large-4{
-	background: lighten($col2, 5%);
+	background: lighten(#77cc33, 5%);
 }
 
-.agilite article:nth-child(3) .large-4{
-	//background: lighten($col3, 5%);
+.agilite article:nth-child(4) .large-4{
+	background: lighten(#FFD204, 5%);
 }
 
 
