--- a/web/assets/scss/style.scss
+++ b/web/assets/scss/style.scss
@@ -6,7 +6,7 @@ $text-color : #2A414C;
 $col1: #61AFF0;
 $col2: #ff4a46;
 $col3: #009884;
-$col4: #e79027;
+$col4: #f26e25;
 $col5: #087ec2;
 
 $small-margin:500;
