--- a/views/layout.html.twig
+++ b/views/layout.html.twig
@@ -50,7 +50,9 @@
 					<a class='nav-link enabled {% if page == 'home' %}current{% endif %}' href="/" data-pos="1">Home</a>
 					<a class='nav-link enabled {% if page == 'team' %}current{% endif %}' href="/team" data-pos="2">Team</a>
 					<a class='nav-link enabled {% if page == 'agilite' %}current{% endif %}' href="/agilite" data-pos="3">Agilite</a>
+
 					<a class="nav-link-contact hide-for-small-only">Contact</a>
+					<a class='nav-link extia' href="http://extia.fr" target="_blank"><img src="assets/img/svg/logo_extia.svg" alt="Logo extia" class="svg"></a>
 					<div class="nav-contact show-for-small-only">
 						<a class="phone-contact" href="tel:0146999191">Phone</a><!--
 						--><a class="mail-contact" href="mailto:contact@kilix.fr">Email</a>
@@ -73,29 +75,20 @@
 				<iframe width='100%' height='100%' src='http://a.tiles.mapbox.com/v3/bulby97.map-zj10lv4w/mm/index.html?secure=1#18/48.82681/2.22268'></iframe>
 			</div>
 			<div class="copyright row">
-				<div class="medium-8 medium-centered columns clearfix">
-					<div class="medium-6 columns">
+					<div class="medium-4 columns">
 						<strong>Kilix by Extia</strong> <br>
 						<a target="_blank" href="https://maps.google.fr/maps?q=google+maps+1+avenue+de+la+cristallerie&amp;ie=UTF-8&amp;hq=&amp;hnear=0x47e67b0491111b29:0x1e40b81275175848,1+Avenue+de+la+Cristallerie,+92310+S%C3%A8vres&amp;gl=fr&amp;ei=S0DYUqWaOKO90QX4roHIDw&amp;ved=0CDIQ8gEwAA">1, avenue de la Cristallerie</a>
 						 <br>Entrée A – 6ème étage <br>92310 SÈVRES
 					</div>
-					<div class="medium-6 columns">
+					<div class="medium-4 columns">
 						<strong>Contactez-nous</strong> <br>
 						Tél : 01 46 99 91 91 <br>
 						Fax : 01 46 99 91 90 <br>
 						<a href="mailto:contact@kilix.fr">contact@kilix.fr</a>
 					</div>
-					{#
-						<div class="medium-4 columns footer-links">
-							<a class="enabled" data-pos="1" href="/">Home</a><br>
-							<a class="enabled" data-pos="2" href="/team">Team</a><br>
-							<a class="enabled" data-pos="3" href="/agilite">Agilité</a>
-						</div>
-					#}
-				</div>
-			</div>
-			<div class="copyright2">
-				Kilix <i class="icon-heart" data-text="est une marque"></i> Extia <br>Tous droits réservés Copyright © 2014 Kilix
+					<div class="copyright2 medium-4 columns">
+						Kilix <i class="icon-heart" data-text="est une marque"></i> Extia <br>Tous droits réservés Copyright © 2014 Kilix
+					</div>
 			</div>
 		</footer>
   		{% include "scripts-debug.html.twig" %}
