--- a/web/assets/scss/components/footer.scss
+++ b/web/assets/scss/components/footer.scss
@@ -47,7 +47,11 @@ footer{
 		content: attr(data-text); 
 		color: #8b8b8b;
 		font-family: Source Sans Pro;
-		width: 108px;
+		width: 119px;
+	}
+
+	.map{
+		opacity:0;
 	}
 
 	.copyright{
@@ -57,17 +61,15 @@ footer{
 		line-height: 22px;
 		position: relative;
 		z-index:2;
-		
-		.medium-8{
-			padding:2rem 0;
+		padding:2rem 0;
 
-			@media #{$medium-up} {
-				padding:6rem 0;
-			}
+		@media #{$medium-up} {
+			padding:5rem 0;
 		}
-		.medium-6{
+
+		.medium-4{
 			text-align: left;
-			font-size:rem-calc(15);
+			//font-size:rem-calc(15);
 			line-height: rem-calc(24);
 			margin-top:3rem;
 			
@@ -100,12 +102,11 @@ footer{
 	}
 
 	.copyright2{
-		background: rgb(41, 42, 43);
 		position: relative;
 		z-index: 3;
 		text-align: center;
-		padding: 1.5rem 0;
-		font-size: rem-calc(16);
+		padding-top: 1.5rem;
+		padding-bottom: 1.5rem;
 		color: #8b8b8b;
 		font-weight: 400;
 		line-height: 22px;
