--- a/web/assets/scss/components/menu.scss
+++ b/web/assets/scss/components/menu.scss
@@ -217,6 +217,7 @@ $mobile-contact-height: 40;
 
 		}
 
+
 		.nav-link {
 			opacity: .2;
 			font-family: Ubuntu;
@@ -245,7 +246,7 @@ $mobile-contact-height: 40;
 				@include linkedIn;
 				border-bottom: none;
 
-					&:after{
+				&:after{
 					position: absolute;
 					width: 100%;
 					height: 2px;
@@ -262,6 +263,34 @@ $mobile-contact-height: 40;
 					&:after{
 						transform: translateY(0);
 						opacity:1;
+					}
+				}
+			}
+
+			&.extia{
+				opacity:1;
+
+				&:hover:after{
+					opacity:0!important;
+				}
+
+				&:hover{
+					svg{
+						polygon, path{
+							fill: $col4;
+						}
+					}
+				}
+
+				svg{
+					height: 18px;
+					width: 55px;
+					transform: translateY(3px);
+					transition:0.3s ease;
+
+					polygon, path{
+						fill:white;
+						
 					}
 				}
 			}
