--- a/views/agilite.html.twig
+++ b/views/agilite.html.twig
@@ -34,9 +34,6 @@ Alliée aux principes de <strong>l'amélioration continue</strong> elle nous per
 					<div class="medium-6 columns large-push-6">
 						<h2>Gestion par la Valeur</h2>
 						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptates, tenetur, temporibus, inventore, ipsum ut itaque nobis dolore qui facere suscipit pariatur sint alias modi soluta labore repudiandae quidem tempora odio.Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestias, adipisci eligendi totam. Dolorum, a quis sunt quasi adipisci magnam alias aspernatur asperiores suscipit rerum cumque minima mollitia fuga vero id!</p>
-						<p>
-							<a data-pos="1" data-scroll="0" href="/" data-page-title="Home" class="button enabled"><span data-hover="Back">Back</span></a>
-						</p>
 					</div>
 
 					<div class="medium-6  columns large-pull-6 agility-item scroll-item">
@@ -69,6 +66,7 @@ Alliée aux principes de <strong>l'amélioration continue</strong> elle nous per
 							</ul>
 						</div>
 					</div>
+					<a data-pos="1" data-scroll="0" href="/" data-page-title="Home" class="button enabled"><span data-hover="Retour">Retour</span></a>
 				</div>	
 			</article>
 
@@ -103,6 +101,7 @@ Alliée aux principes de <strong>l'amélioration continue</strong> elle nous per
 							</ul>
 						</div>
 					</div>
+					<a data-pos="1" data-scroll="1" href="/" data-page-title="Home" class="button enabled"><span data-hover="Retour">Retour</span></a>
 				</div>	
 			</article>
 
@@ -111,9 +110,6 @@ Alliée aux principes de <strong>l'amélioration continue</strong> elle nous per
 					<div class="medium-6 large-push-6 columns">
 						<h2>Adaptabilité</h2>
 						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptates, tenetur, temporibus, inventore, ipsum ut itaque nobis dolore qui facere suscipit pariatur sint alias modi soluta labore repudiandae quidem tempora odio.Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestias, adipisci eligendi totam. Dolorum, a quis sunt quasi adipisci magnam alias aspernatur asperiores suscipit rerum cumque minima mollitia fuga vero id!</p>
-						<p>
-							<a data-pos="1" data-scroll="1" href="/" data-page-title="Home" class="button enabled"><span data-hover="Back">Back</span></a>
-						</p>
 					</div>
 					<div class="medium-6 large-pull-6 columns agility-item scroll-item">
 						<div class="large-8 large-push-4 columns">
