changed losange color in homepage

--- a/web/assets/scss/sections/home.scss
+++ b/web/assets/scss/sections/home.scss
@@ -4,6 +4,7 @@
 	position:relative;
 }
 
+
 .intro{
 
 	position: relative;
@@ -527,7 +528,7 @@
 }
 
 .homepage.losange:hover{
-	background: #ff4a46;
+	background: #61aff0;
 }
 
 .teampage.losange:hover{
