--- a/views/home.html.twig
+++ b/views/home.html.twig
@@ -100,7 +100,6 @@
 					<h2><span>Amélioration</span><span> continue</span></h2>
 					<h3>Toujours progresser pour viser l’excellence.</h3>
 					<p>Tous les projets sont différents. Nous tirons parti de cette diversité pour apprendre et évoluer sans cesse. Ces retours d’expériences servent l’amélioration de votre produit.</p>
-					<a data-pos="3" data-scroll="2" data-page-title="Agilite" href="/agilite" class="button enabled"><span data-hover="En savoir plus">En savoir plus</span></a>
 				</div>
 				<div class="large-6 medium-6 columns anim-item">
 					{% if ress.isMobile ==  true %}
@@ -122,7 +121,7 @@
 					<h2>Extia</h2>
 					<h3>Boostez vos projets grâce à l'énergie d’Extia</h3>
 					<p>Nous nous appuyons sur l'expertise d’Extia, acteur reconnu du conseil depuis 7 ans, qui met à votre disposition ses meilleurs consultants et vous garantit l'atteinte de vos objectifs dans les délais impartis.</p>
-					<a href="http://www.extia.fr" target=_blank class="button enabled"><span data-hover="Accéder à Extia.fr">Accéder à Extia.fr</span></a>
+					<a href="http://www.extia.fr" target=_blank class="button"><span data-hover="Accéder à Extia.fr">Accéder à Extia.fr</span></a>
 				</article>
 				<div class="large-6 large-pull-6 medium-7  columns">
 				{% if ress.isMobile ==  true %}
