--- a/views/team.html.twig
+++ b/views/team.html.twig
@@ -6,7 +6,7 @@
 			<div class="row">
 				<div class="large-8 columns">
 					<h1>Vous et Nous <span></span><i class="icon-arrow-down4"> </i></h1>
-					<p>L’équipe Kilix est composée d’experts reconnus qui interviennent sur l’ensemble du  projets. 
+					<p>L’équipe Kilix est composée d’experts reconnus qui interviennent sur l’ensemble du  projet. 
 Mais fondamentalement, il y a vous, apportant la vision “produit”.</p>
 				</div>
 			</div>
@@ -18,14 +18,14 @@ Mais fondamentalement, il y a vous, apportant la vision “produit”.</p>
 					</div>
 					<article class="medium-8 columns intro-content">
 						<h2>Vous...</h2>
-						<p>Le client est la pierre angulaire de l’équipe. Vous bénéficiez d’une <strong>visibilité totale</strong> sur votre projet à tout moment. Contrairement aux modes de gestion de projet classiques, vous accompagnez le développement de votre produit et pouvez affiner votre vision à tout moment. </p>
+						<p>Le client est la pierre angulaire de l’équipe. Vous bénéficiez d’une visibilité totale sur votre projet à tout moment. Contrairement aux modes de gestion de projet classiques, vous accompagnez le développement de votre produit et pouvez affiner votre vision à tout moment. </p>
 						<h2>...Et nous</h2>
 						<p>
 							L’équipe de Kilix se compose d’experts reconnus qui interviennent sur tous les métiers : 
 								UX et UI Design, 
-								Référencement, 
-								Technologies front-end et back-end avant-gardistes, 
-								Analyse approfondie des tendances à venir…
+								référencement, 
+								technologies front-end et back-end avant-gardistes, 
+								analyse approfondie des tendances à venir…
 
 							La synergie ainsi créée favorise la réussite de notre aventure.
 						</p>
@@ -58,10 +58,17 @@ Mais fondamentalement, il y a vous, apportant la vision “produit”.</p>
 				</div>
 				<article class="large-4 medium-5 columns ">
 					<h3>Soyons Agile</h3>
-					<p>La réussite d’un projet n’est pas conditionnée que par la qualité de l’équipe qui se charge de sa création. 
-					Quelque soit ses forces, elle ne pourra jamais comprendre et définir les besoins utilisateurs (user story) mieux que le demandeur.
-					</p><p>Il nous parait évident que l’équipe parfaite sera constituée des réalisateurs avec le décideur.
-					Ce dernier devient l’acteur principal d’une démarche itérative et incrémentale au service de son projet.</p>
+					<p>
+						La réussite de votre projet est conditionnée par la qualité des experts en charge de sa conception.
+					</p>
+					<p>
+						Néanmoins, qui peut comprendre et définir votre besoin mieux que vous ?
+					</p>
+					<p>
+						Il nous paraît évident que l’équipe idéale vous intègre au même titre que nos développeurs.
+						Vous devenez ainsi l’acteur principal de votre projet !
+					</p>
+					
 				</article>
 			</div>
 		</section>
