--- a/views/home.html.twig
+++ b/views/home.html.twig
@@ -48,7 +48,7 @@
 				<div class="large-6 medium-5 columns anim-content scroll-item">
 					<h2><span>Gestion <span>par </span></span><span>la</span> <span>valeur</span></h2>
 					<h3>Optimiser la création de valeur</h3>
-					<p>Nous pilotons votre projet de A à Z avec vous en fonction de la valeur qu’il apportera à vos utilisateurs. Vous possédez rapidement un produit qui répond à vos besoins et ceux de votre cible.</p>
+					<p>Nous pilotons avec vous votre projet de A à Z en fonction de la valeur qu’il apportera à vos utilisateurs. Vous possédez rapidement un produit qui répond à vos besoins et ceux de votre cible.</p>
 					<a data-pos="3" data-scroll="0" data-page-title="Agilite" href="/agilite" class="button enabled"><span data-hover="En savoir plus">En savoir plus</span></a>
 				</div>
 				<div class="large-6 medium-7 columns anim-item">
