patching IE bg color

--- a/views/layout.html.twig
+++ b/views/layout.html.twig
@@ -32,6 +32,9 @@
 				.landing-main-text {
 					margin-top: 0rem !important;
 				}
+				.svg-anim {
+					background: #fff;
+				}
   			</style>
   		{% endif %}
 	</head>
