footer copyright message updated

--- a/views/layout.html.twig
+++ b/views/layout.html.twig
@@ -96,7 +96,7 @@
 						<a href="mailto:contact@kilix.fr">contact@kilix.fr</a>
 					</div>
 					<div class="copyright2 medium-4 columns">
-						Kilix <i class="icon-heart" data-text="est une marque"></i> Extia <br>Tous droits réservés Copyright © 2014 Kilix
+						©2014 Kilix <i class="icon-heart" data-text="est une marque déposée d'"></i> Extia
 					</div>
 			</div>
 		</footer>
