--- a/views/layout.html.twig
+++ b/views/layout.html.twig
@@ -61,7 +61,13 @@
 					<a class='nav-link enabled {% if page == 'agilite' %}current{% endif %}' href="/agilite" data-pos="3">Agilite</a>
 
 					<a class="nav-link-contact hide-for-small-only">Contact</a>
-					<a class='nav-link extia' href="http://extia.fr" target="_blank"><img src="assets/img/svg/logo_extia.svg" alt="Logo extia" class="svg"></a>
+					<a class='nav-link extia' href="http://extia.fr" target="_blank">
+						{% if ress.isMobile ==  true %}
+							<img src="assets/img/logo_extia.png" alt="Logo extia" class=""></a>
+						{% else %}
+							<img src="assets/img/svg/logo_extia.svg" alt="Logo extia" class="svg"></a>
+				  		{% endif %}
+						
 					<div class="nav-contact show-for-small-only">
 						<a class="phone-contact" href="tel:0146999191">Phone</a><!--
 						--><a class="mail-contact" href="mailto:contact@kilix.fr">Email</a>
