--- a/web/assets/scss/components/menu.scss
+++ b/web/assets/scss/components/menu.scss
@@ -1,6 +1,7 @@
 /* MENU */
 
 $mobile-link-height: 70;
+$mobile-link-height-landscape: 50;
 $mobile-link-nav: 63;
 $mobile-contact-height: 40;
 
@@ -28,7 +29,7 @@ $mobile-contact-height: 40;
 	z-index: 10;
 	box-shadow: rgba(0, 0, 0, 0.05) 0px 8px 0px;
 	transition:height .3s cubic-bezier(0.165,0.840,0.440,1.000),top .3s cubic-bezier(0.165,0.840,0.440,1.000),transform .6s cubic-bezier(0.165,0.840,0.440,1.000), background .6s cubic-bezier(0.165,0.840,0.440,1.000);	
-	
+
 	
 	@media #{$medium-up} {
 		height: rem-calc(100);
@@ -68,7 +69,6 @@ $mobile-contact-height: 40;
 				}	
 			}
 		}
-
 	}
 
 
@@ -229,7 +229,7 @@ $mobile-contact-height: 40;
 			display: block;
 			padding-left: 1rem;
 			height: rem-calc($mobile-link-height);
-			line-height: rem-calc($mobile-link-height);;
+			line-height: rem-calc($mobile-link-height);
 			pointer-events: visible;
 			position: relative;
 			border-bottom: 1px solid rgba(255,255,255,.1);
@@ -239,7 +239,12 @@ $mobile-contact-height: 40;
 				&:hover{
 					background: rgba(255,255,255,0.1);
 				}
+				@media screen and (orientation: landscape) {
+					height: rem-calc($mobile-link-height-landscape) !important;
+					line-height: rem-calc($mobile-link-height-landscape) !important;
+				}
 			}
+			
 
 
 			@media #{$medium-up} {
@@ -290,8 +295,14 @@ $mobile-contact-height: 40;
 
 					polygon, path{
 						fill:white;
-						
 					}
+					#logo-x_1, #logo-x_2 {
+						fill: $col4;
+					}
+				}
+				img {
+					height: 22px;
+					width: 55px;
 				}
 			}
 		}
@@ -382,6 +393,10 @@ body.unfolded {
 		}
 		.navbar {
 			transform:translateY(rem-calc($mobile-link-height*4 + $mobile-contact-height));
+			@media screen and (orientation: landscape) {
+				transform:translateY(rem-calc($mobile-link-height-landscape*4 + $mobile-contact-height));
+
+			}
 			transition:transform .6s cubic-bezier(0.165,0.840,0.440,1.000);			
 			@media #{$medium-up} {
 				transform:translateY(rem-calc(0));
