Update text team

--- a/views/team.html.twig
+++ b/views/team.html.twig
@@ -6,8 +6,7 @@
 			<div class="row">
 				<div class="large-8 columns">
 					<h1>Vous et Nous <span></span><i class="icon-arrow-down4"> </i></h1>
-					<p>L’équipe Kilix est composée d’experts reconnus qui interviennent sur l’ensemble du  projet. 
-Mais fondamentalement, il y a vous, apportant la vision “produit”.</p>
+					<p>L’équipe Kilix est composée d’experts reconnus qui interviennent avec vous sur l’ensemble du  projet.</p>
 				</div>
 			</div>
 		</header>
