--- a/web/assets/scss/sections/home.scss
+++ b/web/assets/scss/sections/home.scss
@@ -93,6 +93,7 @@
 
 .landing-home{
 	height:rem-calc($small-margin);
+	transform: translate3d(0,0,0);
 	transition:0.2s ease;
 	padding-top: rem-calc(63);
 
@@ -225,7 +226,7 @@
 .svg-anim{
 	position:relative;
 	z-index:2;
-	// background:#ECECF5;
+	background:#ECECF5;
 
 	@media #{$medium-up}{
 		background: rgb(236,236,245); /* Old browsers */
@@ -239,7 +240,6 @@
 
 		&.svg-risque, &.svg-extia{
 			@media #{$large-up}{
-				background: rgb(236,236,245); /* Old browsers */
 				background: -moz-linear-gradient(70deg,  rgba(236,236,245,1) 0%, rgba(236,236,245,1) 30%, rgba(230,230,237,1) 30%); /* FF3.6+ */
 				background: -webkit-gradient(linear, left bottom, right top, color-stop(0%,rgba(236,236,245,1)), color-stop(30%,rgba(236,236,245,1)), color-stop(30%,rgba(230,230,237,1))); /* Chrome,Safari4+ */
 				background: -webkit-linear-gradient(70deg,  rgba(236,236,245,1) 0%,rgba(236,236,245,1) 30%,rgba(230,230,237,1) 30%); /* Chrome10+,Safari5.1+ */
@@ -281,7 +281,21 @@
 		}
 	}
 
-	svg{
+	svg.extia-big{
+		height: 3rem;
+		display: inline-block;
+		width: 100%;
+
+		@media #{$medium-up}{
+			height: 5rem;
+		}
+
+		@media #{$large-up}{
+			height: 7rem;
+		}
+	}
+
+	svg:not(.replaced-svg){
 		width: 100%;
 		height: rem-calc(250);
 		cursor:pointer;
