png for mobile instead of gifs

--- a/views/home.html.twig
+++ b/views/home.html.twig
@@ -54,9 +54,9 @@
 				<div class="large-6 medium-7 columns anim-item">
 					{% if ress.isMobile ==  true or (browser.browser == "IE" and browser.majorver < 10) %}
 						{% if ress.isTablet == true %}
-							<img src="assets/img/gif/value-medium.gif" alt="Animation valeur">
+							<img src="assets/img/value.png" alt="Animation valeur">
 						{% elseif ress.isMobile == true %}
-							<img src="assets/img/gif/value-small.gif" alt="Animation valeur">
+							<img src="assets/img/value.png" alt="Animation valeur">
 						{% else %}
 							<div class="video-head"></div>
 							<video src="assets/video/valeur-IE.mp4" autoplay loop></video>
@@ -82,9 +82,9 @@
 				<div class="large-6 large-pull-6 medium-7 columns anim-item">
 					{% if ress.isMobile ==  true or (browser.browser == "IE" and browser.majorver < 10) %}
 						{% if ress.isTablet == true %}
-							<img src="assets/img/gif/risk-medium.gif" alt="Animation risque">
+							<img src="assets/img/risk.png" alt="Animation risque">
 						{% elseif ress.isMobile == true %}
-							<img src="assets/img/gif/risk-small.gif" alt="">
+							<img src="assets/img/risk.png" alt="">
 						{% else %}
 							<video src="assets/video/risk-IE.mp4" autoplay loop></video>
 						{% endif %}
@@ -112,9 +112,9 @@
 				<div class="large-6 medium-6 columns anim-item">
 					{% if ress.isMobile ==  true or (browser.browser == "IE" and browser.majorver < 10) %}
 						{% if ress.isTablet == true %}
-							<img src="assets/img/gif/amelio-medium.gif" alt="Animation amélioration continue">
+							<img src="assets/img/amelio.png" alt="Animation amélioration continue">
 						{% elseif ress.isMobile == true %}
-							<img src="assets/img/gif/amelio-small.gif" alt="">
+							<img src="assets/img/amelio.png" alt="">
 						{% else %}
 							<video src="assets/video/amelio-IE.mp4" autoplay loop></video>
 						{% endif %}
@@ -136,9 +136,9 @@
 				<div class="large-6 large-pull-6 medium-7  columns">
 				{% if ress.isMobile ==  true or (browser.browser == "IE" and browser.majorver < 10) %}
 						{% if ress.isTablet == true %}
-							<img src="assets/img/gif/extia-medium.gif" alt="Animation Extia">
+							<img src="assets/img/extia.png" alt="Animation Extia">
 						{% elseif ress.isMobile == true %}
-							<img src="assets/img/gif/extia-small.gif" alt="">
+							<img src="assets/img/extia.png" alt="">
 						{% else %}
 							<video src="assets/video/extia-IE.mp4" autoplay loop></video>
 						{% endif %}
