Fixed gif and js errors

--- a/views/home.html.twig
+++ b/views/home.html.twig
@@ -54,7 +54,7 @@
 				<div class="large-6 medium-7 columns anim-item">
 					{% if ress.isMobile ==  true or (browser.browser == "IE" and browser.majorver < 10) %}
 						{% if ress.isTablet == true %}
-							<img src="assets/img/gif/value-medium.gif" alt="Animation valeur">
+							<img src="assets/img/gif/value-medium.gif" alt="Animation valeur" class="medium-gif">
 						{% elseif ress.isMobile == true %}
 							<img src="assets/img/gif/value-small.gif" alt="Animation valeur">
 						{% else %}
@@ -82,7 +82,7 @@
 				<div class="large-6 large-pull-6 medium-7 columns anim-item">
 					{% if ress.isMobile ==  true or (browser.browser == "IE" and browser.majorver < 10) %}
 						{% if ress.isTablet == true %}
-							<img src="assets/img/gif/risk-medium.gif" alt="Animation risque">
+							<img src="assets/img/gif/risk-medium.gif" alt="Animation risque" class="medium-gif">
 						{% elseif ress.isMobile == true %}
 							<img src="assets/img/gif/risk-small.gif" alt="">
 						{% else %}
@@ -112,7 +112,7 @@
 				<div class="large-6 medium-6 columns anim-item">
 					{% if ress.isMobile ==  true or (browser.browser == "IE" and browser.majorver < 10) %}
 						{% if ress.isTablet == true %}
-							<img src="assets/img/gif/amelio-medium.gif" alt="Animation amélioration continue">
+							<img src="assets/img/gif/amelio-medium.gif" alt="Animation amélioration continue"  class="medium-gif">
 						{% elseif ress.isMobile == true %}
 							<img src="assets/img/gif/amelio-small.gif" alt="">
 						{% else %}
@@ -136,7 +136,7 @@
 				<div class="large-6 large-pull-6 medium-7  columns">
 				{% if ress.isMobile ==  true or (browser.browser == "IE" and browser.majorver < 10) %}
 						{% if ress.isTablet == true %}
-							<img src="assets/img/gif/extia-medium.gif" alt="Animation Extia">
+							<img src="assets/img/gif/extia-medium.gif" alt="Animation Extia"  class="medium-gif">
 						{% elseif ress.isMobile == true %}
 							<img src="assets/img/gif/extia-small.gif" alt="">
 						{% else %}
