--- a/web/assets/scss/sections/home.scss
+++ b/web/assets/scss/sections/home.scss
@@ -239,7 +239,7 @@
 
 
 		&.svg-risque, &.svg-extia{
-			@media #{$large-up}{
+			@media #{$xlarge-up}{
 				background: -moz-linear-gradient(70deg,  rgba(236,236,245,1) 0%, rgba(236,236,245,1) 30%, rgba(230,230,237,1) 30%); /* FF3.6+ */
 				background: -webkit-gradient(linear, left bottom, right top, color-stop(0%,rgba(236,236,245,1)), color-stop(30%,rgba(236,236,245,1)), color-stop(30%,rgba(230,230,237,1))); /* Chrome,Safari4+ */
 				background: -webkit-linear-gradient(70deg,  rgba(236,236,245,1) 0%,rgba(236,236,245,1) 30%,rgba(230,230,237,1) 30%); /* Chrome10+,Safari5.1+ */
@@ -279,6 +279,10 @@
 		@media #{$xlarge-up}{
 			//margin-top: rem-calc(60);
 		}
+	}
+
+	.medium-gif{
+		width: 100%;
 	}
 
 	svg.extia-big{
