--- a/views/home.html.twig
+++ b/views/home.html.twig
@@ -128,7 +128,15 @@
 		<section class="svg-anim ❤ svg-extia" data-color="col4" data-title="Extia">
 			<div class="row">
 				<article class="large-6 large-push-6 medium-5  columns anim-content">
-					<h2>Extia</h2>
+					<h2>
+						<p class='title'>
+							Extia
+						</p>
+						<p class='logo'>
+							<img src="/assets/img/extia-logo.png" alt="Logo Extia">
+						</p>
+						
+					</h2>
 					<h3>Boostez vos projets grâce à l'énergie d’Extia</h3>
 					<p>Nous nous appuyons sur l'expertise d’Extia, acteur reconnu du conseil depuis 7 ans, qui met à votre disposition ses meilleurs consultants et vous garantit l'atteinte de vos objectifs dans les délais impartis.</p>
 					<a href="http://www.extia.fr" target=_blank class="button"><span data-hover="Accéder à Extia.fr">Accéder à Extia.fr</span></a>
