Fix png logo size Align center gifs.

--- a/views/home.html.twig
+++ b/views/home.html.twig
@@ -141,7 +141,7 @@
 					<p>Nous nous appuyons sur l'expertise d’Extia, acteur reconnu du conseil depuis 7 ans, qui met à votre disposition ses meilleurs consultants et vous garantit l'atteinte de vos objectifs dans les délais impartis.</p>
 					<a href="http://www.extia.fr" target=_blank class="button"><span data-hover="Accéder à Extia.fr">Accéder à Extia.fr</span></a>
 				</article>
-				<div class="large-6 large-pull-6 medium-7  columns">
+				<div class="large-6 large-pull-6 medium-7  columns anim-item">
 				{% if ress.isMobile ==  true or (browser.browser == "IE" and browser.majorver < 10) %}
 						{% if ress.isTablet == true %}
 							<img src="assets/img/gif/extia-medium.gif" alt="Animation Extia"  class="medium-gif">
