--- a/web/assets/scss/sections/agilite.scss
+++ b/web/assets/scss/sections/agilite.scss
@@ -46,11 +46,14 @@
 		border: 1px solid rgba(190, 190, 190, 1);
 		background: lighten($col1, 5%);
 		color:white;
+		position: absolute; top:0; left:0;
+		height: 100%;
 	}
 }
 
 .agilite article:nth-child(2) .large-4{
 	background: lighten($col2, 5%);
+	position: absolute; top:0; right:0; left:auto;
 }
 
 .agilite article:nth-child(3) .large-4{
@@ -59,6 +62,7 @@
 
 .agilite article:nth-child(4) .large-4{
 	background: lighten($col4, 5%);
+	position: absolute; top:0; right:0; left:auto;
 }
 
 
@@ -67,6 +71,9 @@
 
 	ul {
 		list-style-type: none;
+		top: 50%;
+		transform: translateY(-65%);
+		position: relative;
 
 		li {
 			position: relative;
