Added correct titles

--- a/views/layout.html.twig
+++ b/views/layout.html.twig
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>Kilix - L'Usine digitale</title>
+		<title>{{title}}</title>
 		<link rel="shortcut icon" href="favicon.ico">
 		<meta name="description" content="Kilix est une agence digitale fondée sur l'Agilité. Elle réalise des projets au forfait, du site vitrine à l'ERP sur mesure en passant par les middlewares." />
   		<link href="/assets/css/app.min.css" rel="stylesheet" type="text/css" media="all"/>
