--- a/web/assets/scss/sections/agilite.scss
+++ b/web/assets/scss/sections/agilite.scss
@@ -46,14 +46,17 @@
 		border: 1px solid rgba(190, 190, 190, 1);
 		background: lighten($col1, 5%);
 		color:white;
-		position: absolute; top:0; left:0;
-		height: 100%;
+
+		@media #{$large-up}{
+			position: absolute; top:0; left:0;
+			height: 100%;
+		}
 	}
 }
 
 .agilite article:nth-child(2) .large-4{
 	background: lighten($col2, 5%);
-	position: absolute; top:0; right:0; left:auto;
+	@media #{$large-up}{ top:0; right:0; left:auto; }
 }
 
 .agilite article:nth-child(3) .large-4{
@@ -62,7 +65,7 @@
 
 .agilite article:nth-child(4) .large-4{
 	background: lighten($col4, 5%);
-	position: absolute; top:0; right:0; left:auto;
+	@media #{$large-up}{ position: absolute; top:0; right:0; left:auto; }
 }
 
 
@@ -71,8 +74,7 @@
 
 	ul {
 		list-style-type: none;
-		top: 50%;
-		transform: translateY(-65%);
+		@media #{$large-up}{top: 50%;transform: translateY(-65%);}
 		position: relative;
 
 		li {
