--- a/web/assets/scss/components/footer.scss
+++ b/web/assets/scss/components/footer.scss
@@ -67,12 +67,25 @@ footer{
 			padding:5rem 0;
 		}
 
-		.medium-4{
+		.medium-4,.medium-2{
 			text-align: left;
 			//font-size:rem-calc(15);
 			line-height: rem-calc(24);
 			margin-top:3rem;
 			
+			.reference {
+				width: 23%;
+				height: rem-calc(48);
+				line-height: rem-calc(48);
+				margin: 1%;
+				float: left;
+				text-align: center;
+
+				img {
+					max-height: 100%;
+				}
+			}
+
 			@media #{$medium-up} {
 				margin-top:0;
 			}
