updated content on home, agility and team

--- a/views/agilite.html.twig
+++ b/views/agilite.html.twig
@@ -74,7 +74,7 @@ Alliée aux principes de <strong>l'amélioration continue</strong> elle nous per
 				<div class="row">
 					<div class="medium-6 columns">
 						<h2>Gestion par les Risques</h2>
-						<p>La majorité des projets échouent en raison d'une mauvaise appréciation des risques. Pour pallier à cela, Kilix réalise en collaboration avec vous une analyse des complications potentielles liées à votre projet, qu'elles soient d'ordre humain, technologique ou organisationnel. Ensemble, nous anticipons les écueils par la mise en place de plans d'actions concrets régulièrement réévalués. Cette approche garantit une réduction de 80% des risques après la moitié du temps de développement.</p>
+						<p>La majorité des projets échouent en raison d'une mauvaise appréciation des risques. Pour pallier cela, Kilix réalise en collaboration avec vous une analyse des complications potentielles liées à votre projet, qu'elles soient d'ordre humain, technologique ou organisationnel. Ensemble, nous anticipons les écueils par la mise en place de plans d'actions concrets régulièrement réévalués.</p>
 					</div>
 					<div class="medium-6 columns agility-item scroll-item">
 						<div class="large-8 columns">
