--- a/views/home.html.twig
+++ b/views/home.html.twig
@@ -27,7 +27,7 @@
 				</div>
 				<article class="medium-8 columns intro-content">
 					<h2>L’agence digitale Agile by EXTIA</h2>
-					<p>Kilix combine la maîtrise des technologies Web les plus récentes, qu’elle associe à l’expertise d’Extia en matière de conseil. Guidée par la philosohie agile, notre équipe vous accompagne sur l’ensemble de votre projet, du conseil au développement et Webdesign. Site Web, plateforme de commerce en ligne, intranet ou application mobile, Kilix saura répondre à tous vos besoins… avec Agilité !</p>
+					<p>Kilix combine la maîtrise des technologies Web les plus récentes, qu’elle associe à l’expertise d’Extia en matière de conseil. Guidée par la philosophie agile, notre équipe vous accompagne sur l’ensemble de votre projet, du conseil au développement et au Webdesign. Site Web, plateforme de commerce en ligne, intranet ou application mobile, Kilix saura répondre à tous vos besoins… avec Agilité !</p>
 				</article>
 			</div>
 		</section>
