Super compression + ref  + IE

--- a/views/home.html.twig
+++ b/views/home.html.twig
@@ -6,11 +6,7 @@
 			<div class="row">
 				<div class="large-8 columns">
 					<div class="kilix-dispatch show-for-medium-up">
-						{% if browser.browser == "IE" and browser.majorver < 10 %}
-							<img  x="0px" y="0px" src="assets/img/logo_small.png" id="KILIX-logo">
-						{% else %}
 							<img  x="0px" y="0px" src="assets/img/logo_big.svg" id="KILIX-logo"  viewBox="0 0 1500 200" alt="" class='svg'>
-						{% endif %}
 							<!-- <svg x="0px" y="0px" id="KILIX-logo" viewBox="0 0 1500 200"></svg> -->
 					</div>
 					<h1 class='landing-main-text'>
@@ -52,14 +48,14 @@
 					<a data-pos="3" data-scroll="0" data-page-title="Agilite" href="/agilite" class="button enabled"><span data-hover="En savoir plus">En savoir plus</span></a>
 				</div>
 				<div class="large-6 medium-7 columns anim-item">
-					{% if ress.isMobile ==  true or (browser.browser == "IE" and browser.majorver < 10) %}
+					{% if ress.isMobile ==  true %}
 						{% if ress.isTablet == true %}
 							<img src="assets/img/value.png" alt="Animation valeur" class="medium-gif">
 						{% elseif ress.isMobile == true %}
 							<img src="assets/img/value.png" alt="Animation valeur">
-						{% else %}
+						{#{% else %}
 							<div class="video-head"></div>
-							<video src="assets/video/valeur-IE.mp4" autoplay loop></video>
+							<video src="assets/video/valeur-IE.mp4" autoplay loop></video>#}
 						{% endif %}
 					{% else %}
 						<svg id="VALEUR-dispatch" x="0px" y="0px" viewBox="0 0 1400 700"></svg>
@@ -80,13 +76,13 @@
 					<a data-pos="3" data-scroll="1" data-page-title="Agilite" href="/agilite" class="button enabled"><span data-hover="En savoir plus">En savoir plus</span></a>
 				</div>
 				<div class="large-6 large-pull-6 medium-7 columns anim-item">
-					{% if ress.isMobile ==  true or (browser.browser == "IE" and browser.majorver < 10) %}
+					{% if ress.isMobile ==  true %}
 						{% if ress.isTablet == true %}
 							<img src="assets/img/risk.png" alt="Animation risque" class="medium-gif">
 						{% elseif ress.isMobile == true %}
 							<img src="assets/img/risk.png" alt="">
-						{% else %}
-							<video src="assets/video/risk-IE.mp4" autoplay loop></video>
+						{#{% else %}
+							<video src="assets/video/risk-IE.mp4" autoplay loop></video>#}
 						{% endif %}
 					{% else %}
 						<svg id="RISK-dispatch" x="0px" y="0px" viewBox="600 100 800 600">
@@ -110,13 +106,13 @@
 					<p>Tous les projets sont différents. Nous tirons parti de cette diversité pour apprendre et évoluer sans cesse. Ces retours d’expériences servent l’amélioration de votre produit.</p>
 				</div>
 				<div class="large-6 medium-6 columns anim-item">
-					{% if ress.isMobile ==  true or (browser.browser == "IE" and browser.majorver < 10) %}
+					{% if ress.isMobile ==  true %}
 						{% if ress.isTablet == true %}
 							<img src="assets/img/amelio.png" alt="Animation amélioration continue" class="medium-gif">
 						{% elseif ress.isMobile == true %}
 							<img src="assets/img/amelio.png" alt="">
-						{% else %}
-							<video src="assets/video/amelio-IE.mp4" autoplay loop></video>
+						{#{% else %}
+							<video src="assets/video/amelio-IE.mp4" autoplay loop></video>#}
 						{% endif %}
 					{% else %}
 						<svg id="AMELIO-transform" x="0px" y="0px" viewBox="0 0 1500 900">
@@ -142,13 +138,13 @@
 					<a href="http://www.extia.fr" target=_blank class="button"><span data-hover="Accéder à Extia.fr">Accéder à Extia.fr</span></a>
 				</article>
 				<div class="large-6 large-pull-6 medium-7  columns anim-item">
-				{% if ress.isMobile ==  true or (browser.browser == "IE" and browser.majorver < 10) %}
+				{% if ress.isMobile ==  true %}
 						{% if ress.isTablet == true %}
 							<img src="assets/img/extia.png" alt="Animation Extia" class="medium-gif">
 						{% elseif ress.isMobile == true %}
 							<img src="assets/img/extia.png" alt="">
-						{% else %}
-							<video src="assets/video/extia-IE.mp4" autoplay loop></video>
+						{#{% else %}
+							<video src="assets/video/extia-IE.mp4" autoplay loop></video>#}
 						{% endif %}
 					{% else %}
 						<svg id="EXTIA-animation" x="0px" y="0px" viewBox="350 0 1400 800">
