--- a/views/how-about-no.html.twig
+++ b/views/how-about-no.html.twig
@@ -1,1 +1,88 @@
-test
+<!doctype html>
+<html lang="en">
+	<head>
+		<meta charset="utf-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<title>Kilix L'Usine digitale</title>
+		<link rel="shortcut icon" href="favicon.ico">
+	</head>
+	<body>
+		    <!-- TU DEVRAIS AVOIR HONTE. Ne me fais pas travailler pour rien stp. Upgrade ton browser. J'ai vraiment la flemme. 
+
+
+                                                                                
+                             ZZZZZZZZZZZZZZZZZZZ                                
+                        ZZZZZZZZZZZZZZZZZZZZZZZZZZZZZ                           
+                     ZZZZZZZ?                    ZZZZZZZZ                       
+                  ZZZZZZZ                           .ZZZZZZ                     
+                ZZZZZ+                                  ZZZZZ                   
+              ZZZZZ                                       7ZZZZ                 
+            ZZZZZ                                           ?ZZZZ               
+           ZZZZZ                                     7II77$   ZZZZ              
+          ZZZZZZZ?                               I?I       7$   ZZZZ            
+         ZZZ   ZZZZ                          I?I            ?    ZZZZ           
+       ZZZZ     .ZZZZ            IIIIIIIIII??                ,    IZZZZZZZZZZZZZ
+      ZZZZ        ZZZZ      I??++============+?I7                  ~ZZZZZZZZZZZZ
+     ZZZZ           ZZZZ :I+====+??==~~====+++++?I7$                +ZZZZZZZZZZZ
+     ZZZ             ZZZZ+===+?I7~ ======+++++++?III7=      Z        ZZZZZZZZZZZ
+    ZZZ.              IZZZZ+I7$  ++=====+++?++??IIIII77               ZZZZZZZZZZ
+   ZZZZ              I==7ZZZ?  ?+=====++?????IIIIIIIII77=              ZZZZZZZZZ
+   ZZZ              I+=+I$ZZZZ++==+?I7==77IIIIIIIIIIIII77~             ZZZZZZZZZ
+   ZZI             I++I7.  :ZZZZ=?         ~IIIIIIIII77777              ZZZZZZZZ
+  ZZZ             7I?7$   I?+ZZZZ           .IIIIII7777777$             ZZZZZZZZ
+  ZZZ             77$    I?===+ZZZZ          77I77777777777             .ZZZZZZZ
+  ZZZ            $7$    I++++?IIZZZZ         77777777777777$             ZZZZZZZ
+ ZZZ             $=   ?I????IIIIIIZZZZ7777777777777777777II$             ZZZZZZZ
+ ZZZ             .   77I?IIIIIIIIII$ZZZZI7777777777777777II7             ZZZZZZZ
+ ZZZ                =7IIIIIIIIIIIIIIIZZZZ7777777777777777II7             ZZZZZZZ
+ ZZZ               .7IIIIIIIIIII7$$$$$ZZZZZ$$$$$$$$$$$$$$77$             ZZZZZZZ
+ ZZZ.              7IIIIIIIIIII7:       ZZZZ                             ZZZZZZZ
+  ZZZ             7IIIIIIIIIIII77         ZZZZ$$$$$$$$$$$777             ZZZZZZZ
+  ZZZ            $7IIIIIIIIII7777~         ZZZZZ7777777I?+?             ,ZZZZZZZ
+  ZZZ            77IIIIIIII7777777$         $ZZZZ7777II+=+=             ZZZZZZZZ
+   ZZZ          $77777II77777777777$$$$$$$$$77ZZZZ$III=~=I              ZZZZZZZZ
+   ZZZ          777$ $77777777777777777777777777ZZZZ+=~+=              ZZZZZZZZZ
+    ZZZ        $777   $$77777777777777777777777IIIZZZZ?                ZZZZZZZZZ
+    ZZZ~       $77$     Z$777777777777777777IIII?==ZZZZ               ZZZ       
+     ZZZ       $77,       Z$$$777777777IIIIIII?+=+?~.ZZZZ            ZZZZ       
+      ZZZ      $77           ZZ$$777IIIIIIII???I:     ZZZZ          $ZZZ        
+      ZZZZ     $77               $=~$$$$$$:             ZZZZ       7ZZZ         
+        ZZZ    ,777          ,$$                         ?ZZZ?    ZZZZ          
+         ZZZ    .$77$$$$$$$$I                              ZZZZ  ZZZZ           
+          ZZZ$    .$$$$$~                                   ?ZZZZZZZ            
+           ZZZZ                                               ZZZZ              
+             ZZZZ                                           ZZZZZ               
+              ZZZZZ                                       ZZZZZ                 
+                ZZZZZZ                                 .ZZZZZ                   
+                ZZZZZZZZZ                           .ZZZZZZ                     
+                ZZZZZZZZZZZZZ                   ?ZZZZZZZ                        
+                ZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZ                           
+
+	-->
+		<style>
+			body{
+				margin:0; padding:0; overflow: hidden; font-family: Arial;
+			}
+
+			img{
+				min-height:100%; position:absolute; bottom:0; right:0; z-index:0;
+			}
+
+			p{
+				position: absolute;z-index: 1;
+				color:white;
+				font-size:80px; width: 800px;height:500px;
+				padding: 50px;
+				text-align: center;
+				top:50%;margin-top: -250px;
+				left:50%; margin-left: -400px;
+			}
+
+			a{
+				color:white; font-size: 40px;
+			}
+		</style>
+		<p>Internet explorer est un super navigateur,<br> <span> <a href="http://browsehappy.com/">pour télécharger d'autres navigateurs.</a></span></p>
+		<img src="/assets/img/landing-bg-IE.jpg">
+	</body>
+</html>
