--- a/views/layout.html.twig
+++ b/views/layout.html.twig
@@ -11,7 +11,7 @@
   		<!--[if IE 9]><script src='assets/js/matchMedia.min.js'><![endif]-->
   		<!--[if lt IE 9]>
             <script>
-                window.location.href('ie');
+                window.location.href('how-about-no');
             </script>
         <![endif]-->
 
