added risk thumb

--- a/views/agilite.html.twig
+++ b/views/agilite.html.twig
@@ -66,7 +66,7 @@ Alliée aux principes de <strong>l'amélioration continue</strong> elle nous per
 							</ul>
 						</div>
 					</div>
-					<a data-pos="1" data-scroll="0" href="/" data-page-title="Home" class="button-back enabled">
+					<a data-pos="1" data-scroll="0" href="/" data-page-title="Home" class="button-back enabled show-for-medium-up">
 						<i class="icon-chevron-right"></i>
 					</a>
 				</div>	
@@ -104,7 +104,7 @@ Alliée aux principes de <strong>l'amélioration continue</strong> elle nous per
 							</ul>
 						</div>
 					</div>
-					<a data-pos="1" data-scroll="1" href="/" data-page-title="Home" class="button-back enabled">
+					<a data-pos="1" data-scroll="1" href="/" data-page-title="Home" class="button-back enabled risques show-for-medium-up">
 						<i class="icon-chevron-right"></i>
 					</a>
 				</div>	
