--- a/views/agilite.html.twig
+++ b/views/agilite.html.twig
@@ -66,7 +66,11 @@ Alliée aux principes de <strong>l'amélioration continue</strong> elle nous per
 							</ul>
 						</div>
 					</div>
+					{% if browser.browser == "IE" and browser.majorver < 10 %}
+					<a data-pos="1" data-scroll="0" href="/" data-page-title="Home" class="buttonIE valeurIE enabled"><span data-hover="Retour">Retour</span></a>
+					{% else %}
 					<a data-pos="1" data-scroll="0" href="/" data-page-title="Home" class="button enabled"><span data-hover="Retour">Retour</span></a>
+					{% endif %}
 				</div>	
 			</article>
 
@@ -101,7 +105,11 @@ Alliée aux principes de <strong>l'amélioration continue</strong> elle nous per
 							</ul>
 						</div>
 					</div>
+					{% if browser.browser == "IE" and browser.majorver < 10 %}
+					<a data-pos="1" data-scroll="1" href="/" data-page-title="Home" class="buttonIE risquesIE enabled"><span data-hover="Retour">Retour</span></a>
+					{% else %}
 					<a data-pos="1" data-scroll="1" href="/" data-page-title="Home" class="button enabled"><span data-hover="Retour">Retour</span></a>
+					{% endif %}
 				</div>	
 			</article>
 
