--- a/web/assets/scss/components/global.scss
+++ b/web/assets/scss/components/global.scss
@@ -62,6 +62,42 @@ img {
 	border: 0;
 }
 
+.valeurIE span:hover{
+	background-color: #61AFF0;
+}
+.risquesIE span:hover{
+	background-color: #FF4A46;
+}
+.extiaIE span:hover{
+	background-color: #E76923;
+}
+
+.buttonIE {
+	font-family: "Source Sans Pro"; font-weight: 400;
+	padding:0;
+	margin:0;
+	margin-top: 2rem;
+
+	&:hover{
+		span{
+			color: #FFF;
+		}
+	}
+
+	span{
+		position: relative;
+		top:rem-calc(30);
+		display: inline-block;
+		color: white;
+		background:$primary-color;
+		line-height: 50px;
+		padding: 0 25px;
+		font-size: rem-calc(16);
+		border-radius: 3px;
+		backface-visibility: hidden;
+	}
+}
+
 a {
 	border: 0;
 	text-decoration: none;
