Raptorize + unlimited pop

--- a/views/team.html.twig
+++ b/views/team.html.twig
@@ -56,7 +56,8 @@
 					{% endif %}
 				</div>
 				<article class="large-4 medium-5 columns ">
-					<h3>Soyons Agile</h3>
+					<h3 class='hide-for-medium-down show-for-medium-large-up'>Soyons Agile</h3>
+					<h3 class='raptor hide-for-large-up'>Soyons Agile</h3>
 					<p>
 						La réussite de votre projet est conditionnée par la qualité des experts en charge de sa conception.
 					</p>
