--- a/views/scripts-debug.html.twig
+++ b/views/scripts-debug.html.twig
@@ -1,6 +1,7 @@
 
 <!-- General -->
 <script src="/assets/js/vendor/jquery.min.js"></script>
+<script src="/assets/js/vendor/jquery.raptorize.1.0.js"></script>
 <script src="/assets/js/vendor/zepto.min.js"></script>
 <script src="/assets/js/vendor/fastclick.min.js"></script>
 <script src="/assets/js/vendor/jquery.transit.min.js"></script>
