--- a/web/assets/scss/style.scss
+++ b/web/assets/scss/style.scss
@@ -65,6 +65,11 @@ $large-margin:800;
     to   {transform: scale(1.1);}
 }
 
+@keyframes MegaPulse{
+	50% { transform: scale(1.15);}
+	100% { transform: scale(1); }
+}
+
 @keyframes fadeToRight{
 	from{ opacity: 0; transform: translateX(-2rem);}
 	to{ opacity: 1; transform: translateX(0);}
