--- a/web/assets/scss/components/global.scss
+++ b/web/assets/scss/components/global.scss
@@ -248,6 +248,7 @@ a {
 	
 	transition: 0.5s ease;
 	transform-origin: 50% 30%;
+	position: relative;
 
 	&:after{
 		content:" ";
@@ -280,10 +281,8 @@ a {
 	top:0;
 	left:0;
 	width:100%;
-	z-index: 10;
 
 	&.wrapper-prev{
-		//transform: translateX(-100%);
 	}
 }
 
