--- a/web/assets/scss/style.scss
+++ b/web/assets/scss/style.scss
@@ -135,13 +135,44 @@ $large-margin:800;
 	animation: rotateCubeRightIn .6s both ease-in;
 }
 
-.page-moveFromRight {
-	animation: moveFromRight .6s ease both;
+
+
+
+
+.page-moveToLeftEasing {
+	animation: moveToLeft .7s ease-in-out both;
+}
+.page-moveToRightEasing {
+	animation: moveToRight .7s ease-in-out both;
 }
 
 .page-moveFromLeft {
 	animation: moveFromLeft .6s ease both;
 }
+
+.page-moveFromRight {
+	animation: moveFromRight .6s ease both;
+}
+
+@keyframes moveFromLeft {
+	from { transform: translateX(-100%); }
+}
+
+@keyframes moveFromRight {
+	from { transform: translateX(100%); }
+}
+
+@keyframes moveToLeft {
+	to { transform: translateX(-100%); }
+}
+
+@keyframes moveToRight { 
+	to { transform: translateX(100%); }
+}
+
+
+
+
 
 .page-fade {
 	animation: fadeout 0.7s ease;
@@ -153,8 +184,8 @@ $large-margin:800;
 	perspective: 2000px;
 }
 
-.pt-page-ontop {
-	z-index: 999;
+.page-ontop {
+	z-index: 999!important;
 }
 
 /* COMPONENTS */ 
