--- a/views/layout.html.twig
+++ b/views/layout.html.twig
@@ -50,7 +50,7 @@
 				</i>
 				<div class="logo">
 					<a href="/">
-						<img class="svg" src="assets/img/logo_small.svg" alt="Logo Kilix">
+						<img class="svg" src="assets/img/logo_small-white.svg" alt="Logo Kilix">
 					</a>
 				</div>
 				<nav class='nav-links-wrapper nav-links-hidden'>
@@ -112,12 +112,14 @@
 					<div class="copyright2 medium-3 columns">
 						© 2014 <br>Kilix <i class="icon-heart" data-text="est une marque déposée d'"></i> Extia<br>
 						<br>
+						
+						{% if ress.isMobile == true %}
+							<iframe allowtransparency="true" frameborder="0" scrolling="no"
+					        src="https://platform.twitter.com/widgets/tweet_button.html?text=Kilix - L'Usine digitale&url=http://www.kilix.fr/"
+					        style="border:none; overflow:hidden; height:35px;float:left;width: 100px;"></iframe>
 
-						<iframe allowtransparency="true" frameborder="0" scrolling="no"
-				        src="https://platform.twitter.com/widgets/tweet_button.html?text=Kilix - L'Usine digitale&url=http://www.kilix.fr/"
-				        style="border:none; overflow:hidden; height:35px;float:left;width: 100px;"></iframe>
-
-						<iframe src="//www.facebook.com/plugins/like.php?href=http%3A%2F%2Fwww.kilix.fr&amp;width&amp;layout=button_count&amp;action=like&amp;show_faces=false&amp;share=false&amp;height=35&amp;appId=236157703133683" scrolling="no" frameborder="0" style="border:none; overflow:hidden; height:35px;width: 200px;" allowTransparency="true"></iframe>
+							<iframe src="//www.facebook.com/plugins/like.php?href=http%3A%2F%2Fwww.kilix.fr&amp;width&amp;layout=button_count&amp;action=like&amp;show_faces=false&amp;share=false&amp;height=35&amp;appId=236157703133683" scrolling="no" frameborder="0" style="border:none; overflow:hidden; height:35px;width: 200px;" allowTransparency="true"></iframe>
+						{% endif %}
 					</div>
 			</div>
 		</footer>
