--- a/views/layout.html.twig
+++ b/views/layout.html.twig
@@ -113,7 +113,7 @@
 						© 2014 <br>Kilix <i class="icon-heart" data-text="est une marque déposée d'"></i> Extia<br>
 						<br>
 						
-						{% if ress.isMobile == true %}
+						{% if ress.isMobile == false %}
 							<iframe allowtransparency="true" frameborder="0" scrolling="no"
 					        src="https://platform.twitter.com/widgets/tweet_button.html?text=Kilix - L'Usine digitale&url=http://www.kilix.fr/"
 					        style="border:none; overflow:hidden; height:35px;float:left;width: 100px;"></iframe>
